config: removed build from gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,6 @@ xcuserdata/
 *.xccheckout
 
 ## compatibility with Xcode 3 and earlier (ignoring not required starting Xcode 4)
-build/
 DerivedData/
 *.moved-aside
 *.pbxuser
@@ -36,6 +35,7 @@ DerivedData/
 ### ReactNative.Buck Stack ###
 buck-out/
 .buckconfig.local
+.buckd/
 .buckversion
 .fakebuckversion
 
